--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.3.6",
     "cobe": "^0.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
